# zaphod-bot

./: .gitignore  .gitmodules  README.md
firmware/: .clang-format  .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  CreateBuildInfo.bat  CreateBuildInfo.sh  F429VETx.ld  FreeRTOSConfig.h  README.md  STM32F429VETx_FLASH.ld  delta-control Debug.cfg  delta-control.ioc  delta-control.xml  main.c
firmware/Drivers/STM32_EEPROM_Emulation/: eeprom.c  eeprom.h
firmware/Src/: main.c  main.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h  usb_device.h
firmware/Src/app_state_machines/: app_background.c  app_background.h  app_config.h  app_hardware.c  app_task_communication.c  app_task_communication.h  app_task_supervisor.h  app_tasks.c  app_times.h  build_info.h
firmware/Src/drivers/: average_short.h  clearpath.c  configuration.c  configuration.h  fan.c  kinematics.c  sensors.c  sensors.h  shutter_release.h  status.c
firmware/Src/hal/: hal_adc.c  hal_button.c  hal_delay.c  hal_dma.c  hal_dma.h  hal_flashmem.c  hal_flashmem.h  hal_gpio.c  hal_gpio.h  hal_gpio_types.h  hal_hard_ic.c  hal_hard_ic.h  hal_pwm.c  hal_pwm.h  hal_soft_ic.c  hal_soft_ic.h  hal_system_speed.c  hal_system_speed.h  hal_systick.c  hal_uart.c  hal_uart.h  hal_watchdog.c
firmware/Src/utility/: debounce.h  event_subscribe.h  fifo.c  fifo.h  state_hsm.c  tick_timer.h
firmware/legacy/: button.c  button.h  status.h
firmware/src/: FreeRTOSConfig.h  main.c  main.h  stm32f4xx_it.c
firmware/src/app_state_machines/: app_background.c  app_background.h  app_config.h  app_events.h  app_hardware.c  app_hardware.h  app_signals.h  app_task_communication.c  app_task_communication.h  app_task_expansion.c  app_task_expansion.h  app_task_ids.h  app_task_led.c  app_task_led.h  app_task_motion.c  app_task_motion.h  app_task_shutter.c  app_task_shutter.h  app_task_supervisor.c  app_task_supervisor.h  app_task_supervisor_private.h  app_tasks.c  app_tasks.h  app_times.h  app_version.c  app_version.h  global.h
firmware/src/application/: CMakeLists.txt
firmware/src/application/app_startup/: CMakeLists.txt  app_startup.c  app_startup.h
firmware/src/application/buzzer/: CMakeLists.txt  buzzer.c  buzzer.h
firmware/src/application/fan/: CMakeLists.txt  fan.c  fan.h
firmware/src/application/guidance/: CMakeLists.txt  README.md  cartesian_helpers.c  cartesian_interpolator.c  cartesian_types.h  movement_types.h  path_interpolator.c  path_interpolator.h  point_follower.c  point_follower.h  request_handler.c  request_handler.h
firmware/src/application/kinematics/: CMakeLists.txt  README.md  effector.c  effector.h  joint_types.h  kinematics.c  kinematics.h
firmware/src/application/lighting/: CMakeLists.txt  led_helpers.h  led_interpolator.c  led_interpolator.h  led_types.h
firmware/src/application/overwatch/: CMakeLists.txt  README.md  mode_mediator.c  mode_mediator.h  overwatch.c  overwatch.h
firmware/src/application/sensors/: CMakeLists.txt  observer.c  observer.h  sensors.c  sensors.h  subject.h
firmware/src/application/telemetry/: CMakeLists.txt  user_interface.c  user_interface.h  user_interface_msgid.h  user_interface_types.h
firmware/src/common/: cartesian_types.h  global.h  qassert.h  signals.h  simple_state_machine.h  version.h
firmware/src/drivers/: CMakeLists.txt  average_float.c  average_float.h  average_short.c  button.c  button.h  buzzer.c  buzzer.h  clearpath.c  clearpath.h  configuration.c  configuration.h  configuration_types.h  demonstration.c  demonstration.h  effector.c  effector.h  expansion.c  expansion.h  fan.c  fan.h  kinematics.c  kinematics.h  led.c  led.h  led_interpolator.c  led_interpolator.h  led_types.c  led_types.h  motion_types.c  motion_types.h  path_interpolator.c  path_interpolator.h  point_follower.c  point_follower.h  sensors.c  shutter_release.c  shutter_release.h  status.c  status.h  (+6 more)
firmware/src/drivers/buzzer/: CMakeLists.txt  buzzer.c  buzzer.h
firmware/src/drivers/configuration/: CMakeLists.txt  configuration.c  configuration.h  configuration_types.h
firmware/src/drivers/demonstrations/: attractor_sequence.c  attractor_sequence.h  attractor_types.c  attractor_types.h  demonstration.c  demonstration.h  internal_sequence.c  internal_sequence.h  random_points.c  random_points.h
firmware/src/drivers/fan/: CMakeLists.txt  fan.c  fan.h
firmware/src/drivers/rgb_led/: CMakeLists.txt  led.c  led.h
firmware/src/drivers/sensors/: CMakeLists.txt  README.md  observer.h  sensors.c  sensors.h  subject.c  subject.h
firmware/src/drivers/servo/: CMakeLists.txt  servo.c  servo.h  servo_hardware.c  servo_hardware.h  servo_settings.c  servo_settings.h  servo_types.h
firmware/src/drivers/shutter_release/: CMakeLists.txt  shutter_release.c  shutter_release.h
firmware/src/drivers/status_led/: CMakeLists.txt  status.c  status.h
firmware/src/hal/: CMakeLists.txt  hal_adc.c  hal_adc.h  hal_button.c  hal_button.h  hal_delay.c  hal_flashmem.c  hal_flashmem.h  hal_gpio.c  hal_gpio.h  hal_gpio_types.h  hal_hard_ic.c  hal_hard_ic.h  hal_ic_hard.c  hal_ic_hard.h  hal_ic_soft.c  hal_pwm.c  hal_pwm.h  hal_reset.c  hal_reset.h  hal_soft_ic.c  hal_soft_ic.h  hal_system_speed.c  hal_system_speed.h  hal_systick.c  hal_systick.h  hal_temperature.c  hal_temperature.h  hal_uart.c  hal_uart.h  hal_uuid.h  hal_watchdog.c  hal_watchdog.h
firmware/src/hal/adc/: CMakeLists.txt  hal_adc.c  hal_adc.h  hal_power.c  hal_power.h  hal_temperature.c  hal_temperature.h
firmware/src/hal/flashmem/: hal_flashmem.c
firmware/src/hal/gpio/: CMakeLists.txt  hal_gpio.c  hal_gpio.h  hal_gpio_types.h
firmware/src/hal/input_capture/: CMakeLists.txt  hal_fan_tacho.c  hal_fan_tacho.h  hal_ic_hard.c  hal_ic_hard.h  hal_ic_soft.c  hal_ic_soft.h  hal_servo_hlfb.c  hal_servo_hlfb.h
firmware/src/utility/: CMakeLists.txt  average_float.c  average_short.c  average_short.h  bitset.c  debounce.c  event_pool.c  event_pool.h  event_queue.c  event_subscribe.c  event_timer.c  event_timer.h  fifo.c  simple_state_machine.h  state_event.h  state_hsm.c  state_hsm.h
(+872 files in other folders)
